test/classes/diten/newArray.good
newArray.chpl:4: error: 'new' must be followed by a type expression
